kubernetes/apps/media/sonarr/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr
  namespace: media
  annotations:
    external-dns.alpha.kubernetes.io/target: "external.${SECRET_DOMAIN}"
    hajimari.io/enable: "true"
    hajimari.io/icon: mdi:television-classic
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: TV Show Management
    gethomepage.dev/group: Media
    gethomepage.dev/icon: mdi-television-classic
    gethomepage.dev/name: sonarr
    gethomepage.dev/widget.type: sonarr
    gethomepage.dev/widget.key: "${HOMEPAGE_VAR_SONARR_KEY}"
    gethomepage.dev/widget.url: http://sonarr.media.svc.cluster.local:80
    gethomepage.dev/siteMonitor: https://sonarr.${SECRET_DOMAIN}
spec:
  ingressClassName: internal
  rules:
    - host: "sonarr.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sonarr
                port:
                  number: 80
  tls:
    - hosts:
        - "sonarr.${SECRET_DOMAIN}"
